--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ body {
 
 .board button {
   padding: 8px 12px;
-  margin: 25px;
+  margin: 5px;
   background: transparent;
   border: 2px solid #eee;
   color: #eee;
@@ -68,11 +68,48 @@ body {
 .turn {
   display: flex;
   justify-content: center;
-  margin: 15px auto;
+  margin: 0px auto;
   width: fit-content;
   position: relative;
   border-radius: 10px;
 }
+
+.game{
+  padding: 15px;
+}
+
+section.contador {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 10px;
+  margin-right: 15px;
+}
+/* 
+.points {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  flex-grow: 1;
+  
+
+}
+
+
+.points div {
+  padding: 5px;
+  margin: 5px;
+  margin-left: 25px;
+  background: transparent;
+  border: 2px solid #eee;
+  color: #eee;
+  width: 100px;
+  border-radius: 5px;
+  transition: 0.2s;
+  font-weight: bold;
+} */
+
+
 
 .turn .square,
 .winner .square {
@@ -86,6 +123,44 @@ body {
   color: #fff;
   background: #09f;
 }
+
+.square[data-value="2"]{
+  background-color: #f6c4e8c2;  
+}
+.square[data-value="4"]{
+  background-color: #f980d79d;
+}
+.square[data-value="8"]{
+  background-color: #ff6dd6cb;
+}
+.square[data-value="16"]{
+  background-color: #ff53ced3;
+}
+.square[data-value="32"]{
+  background-color: #f800b1;
+}
+.square[data-value="64"]{
+  background-color: #f800dfc1;
+}
+.square[data-value="128"]{
+  background-color: #f800dfa8;
+}
+.square[data-value="256"]{
+  background-color: #f800df77;
+}
+.square[data-value="512"]{
+  background-color: #e800f877;
+}
+.square[data-value="1024"]{
+  background-color: #e800f8cd;
+}
+.square[data-value="2048"]{
+  background-color: #ee02ff;
+}
+
+
+
+
 
 .winner {
   position: absolute;
