--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
+  margin-top: -20px;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -83,6 +84,16 @@ section.contador {
   justify-content: space-between;
   margin-left: 10px;
   margin-right: 15px;
+}
+
+.points, .record {
+  border: 2px solid #eee;
+  color: #eee;
+  width: 150px;
+  border-radius: 5px;
+  padding: 8px 12px;
+  margin: 5px;
+  align-items: center;
 }
 /* 
 .points {
